--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H7FK5S1EYV"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F40FW4X1TS"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
-	  gtag('config', 'G-H7FK5S1EYV');
+	
+	  gtag('config', 'G-F40FW4X1TS');
 	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
